testsuite/tests/typecheck/should_fail/T8883.stderr

T8883.hs:20:14: error:
    Could not deduce (Functor (PF a)) arising from a use of ‘fmap’
    from the context: Regular a
      bound by the inferred type of
               fold :: Regular a => (PF a b -> b) -> a -> b
      at T8883.hs:20:1-33
    In the first argument of ‘(.)’, namely ‘fmap (fold f)’
    In the second argument of ‘(.)’, namely ‘fmap (fold f) . from’
    In the expression: f . fmap (fold f) . from
